name:                ivory-bsp-stm32
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
author:              Galois, Inc.
maintainer:          pat@galois.com
-- copyright:
-- category:
build-type:          Simple
cabal-version:       >=1.8

data-files: support/stm32_init.h,
            support/stm32_init.c

library
  exposed-modules:     Ivory.BSP.ARMv7M.Exception,
                       Ivory.BSP.ARMv7M.MemoryMap,
                       Ivory.BSP.ARMv7M.SystemControl.NVIC,

                       Ivory.BSP.STM32.SearchDir,

                       Ivory.BSP.STM32.ClockConfig,
                       Ivory.BSP.STM32.MemoryMap,
                       Ivory.BSP.STM32.PlatformClock,
                       Ivory.BSP.STM32.Init,

                       Ivory.BSP.STM32.Interrupt,
                       Ivory.BSP.STM32.Signalable,
                       Ivory.BSP.STM32.Signalable.TH,
                       Ivory.BSP.STM32.Signalable.Class,

                       Ivory.BSP.STM32.Peripheral.ATIM18.Regs,
                       Ivory.BSP.STM32.Peripheral.ATIM18.RegTypes,
                       Ivory.BSP.STM32.Peripheral.ATIM18.Peripheral,

                       Ivory.BSP.STM32.Peripheral.CAN,
                       Ivory.BSP.STM32.Peripheral.CAN.Filter,
                       Ivory.BSP.STM32.Peripheral.CAN.Peripheral,
                       Ivory.BSP.STM32.Peripheral.CAN.Regs,

                       Ivory.BSP.STM32.Peripheral.Flash,
                       Ivory.BSP.STM32.Peripheral.Flash.Regs,

                       Ivory.BSP.STM32.Peripheral.GPIOF4,
                       Ivory.BSP.STM32.Peripheral.GPIOF4.RegTypes,
                       Ivory.BSP.STM32.Peripheral.GPIOF4.Regs,
                       Ivory.BSP.STM32.Peripheral.GPIOF4.TH,
                       Ivory.BSP.STM32.Peripheral.GPIOF4.Peripheral,

                       Ivory.BSP.STM32.Peripheral.GTIM2345.Regs,
                       Ivory.BSP.STM32.Peripheral.GTIM2345.RegTypes,
                       Ivory.BSP.STM32.Peripheral.GTIM2345.Peripheral,

                       Ivory.BSP.STM32.Peripheral.I2C,
                       Ivory.BSP.STM32.Peripheral.I2C.Regs,
                       Ivory.BSP.STM32.Peripheral.I2C.Peripheral,

                       Ivory.BSP.STM32.Peripheral.PWR,
                       Ivory.BSP.STM32.Peripheral.PWR.Regs,
                       Ivory.BSP.STM32.Peripheral.PWR.RegTypes,

                       Ivory.BSP.STM32.Peripheral.RCC,
                       Ivory.BSP.STM32.Peripheral.RCC.RegTypes,
                       Ivory.BSP.STM32.Peripheral.RCC.Regs,

                       Ivory.BSP.STM32.Peripheral.SPI,
                       Ivory.BSP.STM32.Peripheral.SPI.Regs,
                       Ivory.BSP.STM32.Peripheral.SPI.RegTypes,
                       Ivory.BSP.STM32.Peripheral.SPI.Peripheral,

                       Ivory.BSP.STM32.Peripheral.UART,
                       Ivory.BSP.STM32.Peripheral.UART.Types,
                       Ivory.BSP.STM32.Peripheral.UART.Regs,
                       Ivory.BSP.STM32.Peripheral.UART.Peripheral,

                       Ivory.BSP.STM32.Driver.CAN,
                       Ivory.BSP.STM32.Driver.CAN.Types,

                       Ivory.BSP.STM32.Driver.I2C,
                       Ivory.BSP.STM32.Driver.I2C.Types,
                       Ivory.BSP.STM32.Driver.I2C.I2CDeviceAddr,
                       Ivory.BSP.STM32.Driver.I2C.I2CDriverState,

                       Ivory.BSP.STM32.Driver.SPI,
                       Ivory.BSP.STM32.Driver.SPI.Types,
                       Ivory.BSP.STM32.Driver.SPI.SPIDeviceHandle,

                       Ivory.BSP.STM32.Driver.UART,

                       Ivory.BSP.STM32F405.ClockConfig,
                       Ivory.BSP.STM32F405.MemoryMap,
                       Ivory.BSP.STM32F405.Interrupt,
                       Ivory.BSP.STM32F405.Interrupt.API,
                       Ivory.BSP.STM32F405.Interrupt.Types,
                       Ivory.BSP.STM32F405.CAN,
                       Ivory.BSP.STM32F405.SPI,
                       Ivory.BSP.STM32F405.I2C,
                       Ivory.BSP.STM32F405.RCC,
                       Ivory.BSP.STM32F405.RCC.Regs,
                       Ivory.BSP.STM32F405.GPIO,
                       Ivory.BSP.STM32F405.GPIO.AF,
                       Ivory.BSP.STM32F405.GPIO.Ports,
                       Ivory.BSP.STM32F405.GPIO.Pins,
                       Ivory.BSP.STM32F405.GTIM2345,
                       Ivory.BSP.STM32F405.ATIM18,
                       Ivory.BSP.STM32F405.UART,
                       Ivory.BSP.STM32F405.Init,
                       Ivory.BSP.STM32F405.VectorTable

  other-modules:       Paths_ivory_bsp_stm32
  hs-source-dirs:      src
  build-depends:       base >= 4.6,
                       array,
                       template-haskell,
                       filepath,
                       ivory,
                       ivory-stdlib,
                       ivory-hw,
                       tower >= 0.8

  ghc-options:         -Wall

