
name:                ivory-bsp-tests
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
author:              Galois, Inc.
maintainer:          pat@galois.com
-- copyright:
-- category:
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     BSP.Tests.LED,
                       BSP.Tests.Platforms

  build-depends:       base >= 4.6,
                       monadLib,
                       ivory,
                       ivory-stdlib,
                       ivory-backend-c,
                       ivory-opts,
                       ivory-hw,
                       tower              >= 0.8,
                       tower-statemachine >= 0.8,
                       tower-frontend     >= 0.8,
                       ivory-bsp-stm32

  default-language:    Haskell2010
  ghc-options:         -Wall

executable bsp-uart-tower-test-gen
  main-is:             UARTTowerCompiler.hs
  other-modules:       UARTTower,
                       LEDTower
  hs-source-dirs:      examples
  build-depends:       base >= 4.6,
                       ivory,
                       ivory-stdlib,
                       ivory-backend-c,
                       ivory-hw,
                       tower          >= 0.8,
                       tower-frontend >= 0.8,
                       ivory-bsp-stm32,
                       ivory-bsp-tests
  ghc-options:         -Wall

executable bsp-uart-stress-test-gen
  main-is:             UARTStressTestCompiler.hs
  other-modules:       UARTStressTest,
                       LEDTower
  hs-source-dirs:      examples
  build-depends:       base >= 4.6,
                       ivory,
                       ivory-stdlib,
                       ivory-backend-c,
                       ivory-hw,
                       tower          >= 0.8,
                       tower-frontend >= 0.8,
                       ivory-bsp-stm32,
                       ivory-bsp-tests
  ghc-options:         -Wall

executable bsp-led-tower-test-gen
  main-is:             LEDTowerCompiler.hs
  other-modules:       LEDTower
  hs-source-dirs:      examples
  build-depends:       base >= 4.6,
                       ivory,
                       ivory-stdlib,
                       ivory-backend-c,
                       ivory-hw,
                       tower          >= 0.8,
                       tower-frontend >= 0.8,
                       ivory-bsp-stm32,
                       ivory-bsp-tests
  ghc-options:         -Wall

executable bsp-spi-test-gen
  main-is:             SPITestCompiler.hs
  other-modules:       SPITest,
                       SPITypes
  hs-source-dirs:      examples
  build-depends:       base >= 4.6,
                       ivory,
                       ivory-stdlib,
                       ivory-backend-c,
                       ivory-hw,
                       tower          >= 0.8,
                       tower-frontend >= 0.8,
                       ivory-bsp-stm32,
                       ivory-bsp-tests
  ghc-options:          -Wall

executable bsp-i2c-test-gen
  main-is:             I2CTestCompiler.hs
  other-modules:       I2CTest
  hs-source-dirs:      examples
  build-depends:       base >= 4.6,
                       ivory,
                       ivory-stdlib,
                       ivory-backend-c,
                       ivory-hw,
                       tower          >= 0.8,
                       tower-frontend >= 0.8,
                       ivory-bsp-stm32,
                       ivory-bsp-tests
  ghc-options:          -Wall

---------------------------------------------
-- Pure ivory, without tower:

executable bsp-led-test-gen
  main-is:             LEDBlink.hs
  hs-source-dirs:      examples
  build-depends:       base >= 4.6,
                       ivory,
                       ivory-stdlib,
                       ivory-backend-c,
                       ivory-hw,
                       ivory-bsp-stm32
  ghc-options:         -Wall


executable bsp-uart-test-gen
  main-is:             UARTTest.hs
  hs-source-dirs:      examples
  build-depends:       base >= 4.6,
                       ivory,
                       ivory-stdlib,
                       ivory-backend-c,
                       ivory-hw,
                       ivory-bsp-stm32
  ghc-options:         -Wall

