
name:                ivory-bsp-tests
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
author:              Galois, Inc.
maintainer:          pat@galois.com
-- copyright:
-- category:
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     BSP.Tests.CAN.TestApp,
                       BSP.Tests.I2C.TestApp,
                       BSP.Tests.LED,
                       BSP.Tests.LED.Blink,
                       BSP.Tests.LED.TestApp,
                       BSP.Tests.Platforms,
                       BSP.Tests.SPI.TestApp,
                       BSP.Tests.UART.DebugApp,
                       BSP.Tests.UART.TestApp

  build-depends:       base >= 4.6,
                       monadLib,
                       ivory,
                       ivory-stdlib,
                       ivory-backend-c,
                       ivory-opts,
                       ivory-hw,
                       tower              >= 0.8,
                       tower-statemachine >= 0.8,
                       tower-frontend     >= 0.8,
                       ivory-bsp-stm32

  default-language:    Haskell2010
  ghc-options:         -Wall

executable bsp-can-test-gen
  main-is:             CANTest.hs
  hs-source-dirs:      tests
  build-depends:       base >= 4.6,
                       ivory,
                       ivory-stdlib,
                       ivory-backend-c,
                       ivory-hw,
                       tower          >= 0.8,
                       tower-frontend >= 0.8,
                       ivory-bsp-stm32,
                       ivory-bsp-tests
  ghc-options:          -Wall

executable bsp-i2c-test-gen
  main-is:             I2CTest.hs
  hs-source-dirs:      tests
  build-depends:       base >= 4.6,
                       ivory,
                       ivory-stdlib,
                       ivory-backend-c,
                       ivory-hw,
                       tower          >= 0.8,
                       tower-frontend >= 0.8,
                       ivory-bsp-stm32,
                       ivory-bsp-tests
  ghc-options:          -Wall

executable bsp-led-test-gen
  main-is:             LEDTest.hs
  hs-source-dirs:      tests
  build-depends:       base >= 4.6,
                       ivory,
                       ivory-stdlib,
                       ivory-backend-c,
                       ivory-hw,
                       tower          >= 0.8,
                       tower-frontend >= 0.8,
                       ivory-bsp-stm32,
                       ivory-bsp-tests
  ghc-options:          -Wall

executable bsp-spi-test-gen
  main-is:             SPITest.hs
  hs-source-dirs:      tests
  build-depends:       base >= 4.6,
                       ivory,
                       ivory-stdlib,
                       ivory-backend-c,
                       ivory-hw,
                       tower          >= 0.8,
                       tower-frontend >= 0.8,
                       ivory-bsp-stm32,
                       ivory-bsp-tests
  ghc-options:          -Wall

executable bsp-uart-test-gen
  main-is:             UARTTest.hs
  hs-source-dirs:      tests
  build-depends:       base >= 4.6,
                       ivory,
                       ivory-stdlib,
                       ivory-backend-c,
                       ivory-hw,
                       tower          >= 0.8,
                       tower-frontend >= 0.8,
                       ivory-bsp-stm32,
                       ivory-bsp-tests
  ghc-options:          -Wall

executable bsp-uart-debug-gen
  main-is:             UARTDebug.hs
  hs-source-dirs:      tests
  build-depends:       base >= 4.6,
                       ivory,
                       ivory-stdlib,
                       ivory-backend-c,
                       ivory-hw,
                       tower          >= 0.8,
                       tower-frontend >= 0.8,
                       ivory-bsp-stm32,
                       ivory-bsp-tests
  ghc-options:          -Wall

