name:                ivory-geo
version:             0.1
author:              Galois, Inc.
maintainer:          tommd@galois.com
category:            Language
build-type:          Simple
cabal-version:       >= 1.10
license:             BSD3

flag debug-qq
  default:              False
  description:          Enable dumping of template-haskell splices

library
  exposed-modules:      Ivory.Geo.GPS

  other-modules:        Paths_ivory_geo

  build-depends:        base >= 4.6,
                        filepath,
                        ivory, ivory-stdlib

  hs-source-dirs:       src
  default-language:     Haskell2010
  if flag(debug-qq)
    ghc-options:        -ddump-splices
  ghc-options:          -Wall
