name:                ivory-geo
version:             0.1
author:              Galois, Inc.
maintainer:          tommd@galois.com
category:            Language
build-type:          Simple
cabal-version:       >= 1.10
license:             BSD3

library
  exposed-modules:      Ivory.Geo.GPS

  build-depends:        base >= 4.6,
                        filepath,
                        ivory,
                        ivory-stdlib

  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -Wall
