name:                ivory-px4-hw
version:             0.1.0.0
license:             BSD3
author:              Galois, Inc.
maintainer:          pat@galois.com
copyright:           Galois, Inc. 2013
category:            System
build-type:          Simple
cabal-version:       >= 1.10

library
  exposed-modules:     SMACCMPilot.Hardware.GPS.Types,
                       SMACCMPilot.Hardware.GPS.Types.Position,
                       SMACCMPilot.Hardware.GPS.Types.GPSFix,
                       SMACCMPilot.Hardware.GPS.UBlox,
                       SMACCMPilot.Hardware.GPS.UBlox.Types,

                       SMACCMPilot.Hardware.MPU6000,
                       SMACCMPilot.Hardware.MPU6000.Regs,
                       SMACCMPilot.Hardware.MPU6000.SPI,
                       SMACCMPilot.Hardware.MPU6000.Types,
                       SMACCMPilot.Hardware.MS5611,
                       SMACCMPilot.Hardware.MS5611.Calibration,
                       SMACCMPilot.Hardware.MS5611.Types,
                       SMACCMPilot.Hardware.MS5611.Regs,
                       SMACCMPilot.Hardware.MS5611.Mode,
                       SMACCMPilot.Hardware.MS5611.I2C,
                       SMACCMPilot.Hardware.MS5611.SPI,
                       SMACCMPilot.Hardware.HMC5883L,
                       SMACCMPilot.Hardware.HMC5883L.Regs,
                       SMACCMPilot.Hardware.HMC5883L.I2C,
                       SMACCMPilot.Hardware.LSM303D,
                       SMACCMPilot.Hardware.LSM303D.Regs,
                       SMACCMPilot.Hardware.LSM303D.SPI,

                       SMACCMPilot.Hardware.L3GD20,
                       SMACCMPilot.Hardware.L3GD20.SPI,

                       SMACCMPilot.Hardware.PPM,
                       SMACCMPilot.Hardware.PPM.PulseCapture,
                       SMACCMPilot.Hardware.PPM.PulseCapture.Types,
                       SMACCMPilot.Hardware.PPM.Decode,
                       SMACCMPilot.Hardware.PPM.Decode.Types,

                       SMACCMPilot.Hardware.PX4FMU17,
                       SMACCMPilot.Hardware.PX4FMU17.MotorControl

                       SMACCMPilot.Hardware.CAN,
                       SMACCMPilot.Hardware.CANMessages,

                       SMACCMPilot.Hardware.Sensors,
                       SMACCMPilot.Hardware.SensorManager,
                       SMACCMPilot.Hardware.SensorMonitor,

                       SMACCMPilot.Hardware.RGBLED,

                       SMACCMPilot.Hardware.Tests.Platforms,
                       SMACCMPilot.Hardware.Tests.Serialize,
                       SMACCMPilot.Hardware.Tests.CopterMotors,
                       SMACCMPilot.Hardware.Tests.Ublox,
                       SMACCMPilot.Hardware.Tests.MPU6000,
                       SMACCMPilot.Hardware.Tests.Baro,
                       SMACCMPilot.Hardware.Tests.Magnetometer,
                       SMACCMPilot.Hardware.Tests.PPMIn,
                       SMACCMPilot.Hardware.Tests.RGBLED,
                       SMACCMPilot.Hardware.Tests.AllSensors,

                       SMACCMPilot.Time


  build-depends:       base >= 4.6,
                       monadLib,
                       ivory,
                       ivory-artifact,
                       ivory-stdlib,
                       ivory-serialize,
                       ivory-hw,
                       tower >= 0.9,
                       tower-config,
                       tower-freertos-stm32,
                       ivory-bsp-stm32,
                       ivory-tower-posix,
                       smaccm-comm-schema-tower,
                       smaccm-datalink,
                       tower-hal

  default-language:    Haskell2010
  ghc-options:         -Wall

executable             copter-motor-test-gen
  main-is:             CopterMotorTest.hs
  hs-source-dirs:      tests
  build-depends:       base >= 4.6,
                       monadLib,
                       tower              >= 0.9,
                       tower-config,
                       tower-freertos-stm32,
                       ivory-px4-hw

  default-language:    Haskell2010
  ghc-options:         -Wall

executable             copter-motor-test-client
  main-is:             CopterMotorTestClient.hs
  hs-source-dirs:      tests
  build-depends:       base >= 4.6,
                       bytestring,
                       haskeline,
                       pipes,
                       parsec,
                       transformers,
                       smaccm-commsec,
                       smaccm-datalink


executable             ublox-gps-test-gen
  main-is:             UbloxGPSTest.hs
  hs-source-dirs:      tests
  build-depends:       base >= 4.6,
                       monadLib,
                       tower              >= 0.9,
                       tower-config,
                       tower-freertos-stm32,
                       ivory-px4-hw

  default-language:    Haskell2010
  ghc-options:         -Wall

executable             px4-mpu6k-test-gen
  main-is:             MPU6000Test.hs
  hs-source-dirs:      tests
  build-depends:       base >= 4.6,
                       monadLib,
                       tower              >= 0.9,
                       tower-config,
                       tower-freertos-stm32,
                       ivory-px4-hw

  default-language:    Haskell2010
  ghc-options:         -Wall

executable             px4-baro-test-gen
  main-is:             BaroTest.hs
  hs-source-dirs:      tests
  build-depends:       base >= 4.6,
                       monadLib,
                       tower              >= 0.9,
                       tower-config,
                       tower-freertos-stm32,
                       ivory-px4-hw

  default-language:    Haskell2010
  ghc-options:         -Wall

executable             px4-mag-test-gen
  main-is:             MagTest.hs
  hs-source-dirs:      tests
  build-depends:       base >= 4.6,
                       monadLib,
                       tower              >= 0.9,
                       tower-config,
                       tower-freertos-stm32,
                       ivory-px4-hw

  default-language:    Haskell2010
  ghc-options:         -Wall

executable             px4-ppm-in-test-gen
  main-is:             PPMInTest.hs
  hs-source-dirs:      tests
  build-depends:       base >= 4.6,
                       monadLib,
                       tower              >= 0.9,
                       tower-config,
                       tower-freertos-stm32,
                       ivory-px4-hw

  default-language:    Haskell2010
  ghc-options:         -Wall

executable             px4-rgbled-test-gen
  main-is:             RGBLEDTest.hs
  hs-source-dirs:      tests
  build-depends:       base >= 4.6,
                       monadLib,
                       tower              >= 0.9,
                       tower-config,
                       tower-freertos-stm32,
                       ivory-px4-hw

  default-language:    Haskell2010
  ghc-options:         -Wall

executable             px4-all-sensors-test-gen
  main-is:             AllSensorsTest.hs
  hs-source-dirs:      tests
  build-depends:       base >= 4.6,
                       monadLib,
                       tower              >= 0.9,
                       tower-config,
                       tower-freertos-stm32,
                       ivory-px4-hw

  default-language:    Haskell2010
  ghc-options:         -Wall

executable             px4-sensors-monitor-gen
  main-is:             SensorsMonitor.hs
  hs-source-dirs:      tests
  build-depends:       base >= 4.6,
                       filepath,
                       ivory,
                       ivory-serialize,
                       ivory-stdlib,
                       ivory-tower-posix,
                       smaccm-datalink,
                       tower,
                       tower-hal,
                       ivory-px4-hw,
                       smaccm-comm-schema-tower

  default-language:    Haskell2010
  ghc-options:         -Wall
